optimization of similarity computing